syntax = "proto3";
package protos.v1;
option go_package = "bookingevent/v1";
import "google/protobuf/timestamp.proto";

message BookingEvent {
    EventType event_type = 1;
    string id = 2;
    int32 unit_id = 3;
    google.protobuf.Timestamp from = 4;
    google.protobuf.Timestamp to = 5;
    int32 guests = 6;
    string name = 7;
}

enum EventType {
    EVENT_TYPE_NONE_UNSPECIFIED = 0;
    EVENT_TYPE_CREATE_BOOKING = 1;
    EVENT_TYPE_UPDATE_BOOKING = 2;
    EVENT_TYPE_DELETE_BOOKING = 3;
}

message WriteBookingEventRequest {
    BookingEvent booking_event = 1;
}

message WriteBookingEventResponse {
    bool success = 1;
}

message ReadBookingEventsRequest {
    int32 unit_id = 1;
    int32 last_known_event_id = 2;
}

message ReadBookingEventsResponse {
    BookingEvent booking_event = 1;
}

service BookingEventService {
    rpc WriteBookingEvent(WriteBookingEventRequest) returns (WriteBookingEventResponse);
    rpc ReadBookingEvents(ReadBookingEventsRequest) returns (stream ReadBookingEventsResponse);
}
